# projj

./: .autod.conf.js  .gitignore  .travis.yml  Cargo.toml  DESIGN.md  History.md  LICENSE  README.md  appveyor.yml  clippy.toml  deny.toml  dist-workspace.toml  package.json  tsconfig.json
.github/workflows/: ci.yml  nodejs.yml  publish-crates-io.yml  publish.yml  release.yml
hooks/: git_config_user  zoxide
lib/: add_command.js  base_command.js  base_command.ts  cache.js  cache.ts  command.js  import_command.js  init_command.js  program.js  program.ts  run_command.js  runall_command.js  ssh.js  ssh.ts  utils.js  utils.ts
lib/command/: add.js  add.ts  find.js  find.ts  import.js  import.ts  init.js  init.ts  list.js  remove.js  remove.ts  run.js  run.ts  runall.js  runall.ts  sync.js  sync.ts
src/: color.rs  config.rs  git.rs  hook.rs  integration.rs  main.rs  repo_source.rs  search.rs  select.rs  task.rs
src/cmd/: add.rs  find.rs  init.rs  list.rs  mod.rs  remove.rs  run.rs  search.rs
tasks/: clean  git-config-user  repo-status
test/: base_command.test.js  projj.test.js  projj_add.test.js  projj_find.test.js  projj_import.test.js  projj_init.test.js  projj_remove.test.js  projj_run.test.js  projj_runall.test.js  projj_sync.test.js  smoke_add.js  test_helper.js
test/fixtures/: mock_darwin.js
test/fixtures/add-change-directory/.projj/: config.json
test/fixtures/alias/.projj/: config.json
test/fixtures/base-relative/.projj/: config  config.json
test/fixtures/base-tilde/.projj/: config  config.json
test/fixtures/base-tmp/.projj/: config  config.json
test/fixtures/find-change-directory/: mock_darwin.js  mock_not_darwin.js
test/fixtures/find-change-directory/.projj/: cache.json  config.json
test/fixtures/find-ignore-case/.projj/: cache.json  config.json
test/fixtures/find/.projj/: cache.json  config.json
test/fixtures/hook-add/.projj/: config.json  hook
test/fixtures/hook/.projj/: cache.json  config.json
test/fixtures/importdir/: file.js
test/fixtures/importdir/repo2/: package.json
test/fixtures/multiple-directory/.projj/: cache.json  config.json
test/fixtures/remove/.projj/: config.json
tests/: cli.rs  interactive.rs
(+6 files in other folders)
